resources/testcases_static_checks/tests/positive/isRmfa/r04.rls
../../../tests_common_data/from-evaluation-section/r04.rls