resources/testcases_static_checks/tests/negative/isDrmfc/r13.rls
../../../tests_common_data/from-evaluation-section/r13.rls